gccida/g2/init_cumulative_args
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_cumulative_args/src/i386.c:2010:44: error: use of undeclared identifier 'zero_cum_47'
si128 = _mm_load_si128( ( const __m128i *)&zero_cum_47); 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_cumulative_args/src/i386.c:2012:44: error: use of undeclared identifier 'zero_cum_47'
*( _QWORD *)&cum->sse_nregs = *( _QWORD *)&zero_cum_47.sse_nregs; 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_cumulative_args/src/i386.c:2019:42: error: use of undeclared identifier 'zero_cum_47'
v17 = _mm_load_si128( ( const __m128i *)&zero_cum_47); 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_cumulative_args/src/i386.c:2020:44: error: use of undeclared identifier 'zero_cum_47'
*( _QWORD *)&cum->sse_nregs = *( _QWORD *)&zero_cum_47.sse_nregs; 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_cumulative_args/src/i386.c:2022:20: error: use of undeclared identifier 'zero_cum_47'
cum->maybe_vaarg = zero_cum_47.maybe_vaarg; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_cumulative_args/src/i386.c:2034:63: error: use of undeclared identifier 'zero_cum_47'
*( __m128i *)&cum->words = _mm_load_si128( ( const __m128i *)&zero_cum_47); 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_cumulative_args/src/i386.c:2036:44: error: use of undeclared identifier 'zero_cum_47'
*( _QWORD *)&cum->sse_nregs = *( _QWORD *)&zero_cum_47.sse_nregs; 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_cumulative_args/src/i386.c:2038:20: error: use of undeclared identifier 'zero_cum_47'
cum->maybe_vaarg = zero_cum_47.maybe_vaarg; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_cumulative_args/src/i386.c:2044:42: error: use of undeclared identifier 'zero_cum_47'
v11 = _mm_load_si128( ( const __m128i *)&zero_cum_47); 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_cumulative_args/src/i386.c:2046:44: error: use of undeclared identifier 'zero_cum_47'
*( _QWORD *)&cum->sse_nregs = *( _QWORD *)&zero_cum_47.sse_nregs; 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_cumulative_args/src/i386.c:2048:20: error: use of undeclared identifier 'zero_cum_47'
cum->maybe_vaarg = zero_cum_47.maybe_vaarg; 
                   ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_cumulative_args/src/obj/i386.o] Error 1
